apps/convertx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: convertx
  labels:
    enable-reloader-operator-watching: "true"
