apps/convertx/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: convertx-http-route
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Development
    gethomepage.dev/name: ConvertX
    gethomepage.dev/href: "https://convertx.home.alden.ai"
    gethomepage.dev/description: File Format Conversion
    gethomepage.dev/icon: convertx.png
    gethomepage.dev/app: convertx # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/pod-selector: >-
      app in (convertx)
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default-https-gateway
      namespace: istio-system
  hostnames:
    - convertx.home.alden.ai
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: convertx
          port: 3000
          weight: 1
